--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  attica-5.249.0.tar.xz: c2269e63ffde82742132f38d364b433541cc098b
+  attica-20240217.tar.bz2: 5e91c09b286a005e0e5aaa11d1a21cb61538f210
