--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   attica-20240217.tar.bz2: 5e91c09b286a005e0e5aaa11d1a21cb61538f210
+  attica-6.0.0.tar.xz: 3f325b1a18dc1d74ba7793f438287fcc290e6c90
